--- a/Unit 3/lesson16/confetti_cuisine/views/contact.ejs
+++ b/Unit 3/lesson16/confetti_cuisine/views/contact.ejs
@@ -17,3 +17,9 @@
     <p> We'll get back to you soon!</p>
   </div>
 </div>
+
+<!-- <a href="/subscribers">
+  <button style="padding: 10px 20px; background-color: #342094; color: white; border: none; border-radius: 5px; cursor: pointer;">
+    View Subscribers
+  </button>
+</a> -->
